[update] backend と db の疎通確認

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8100:8000"
     volumes:
-      - ./backend:/app
+      - ./backend/app:/app
     depends_on:
       - db
 
